--- a/hrms/pom.xml
+++ b/hrms/pom.xml
@@ -65,6 +65,11 @@
         <artifactId>cloudinary-http44</artifactId>
         <version>1.24.0</version>
     </dependency>
+    
+    <dependency> 
+			<groupId>org.springframework.boot</groupId> 
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 
 	</dependencies>
 
